Fix: double scroll issue

--- a/my-virtual-pets/my-virtual-pets-frontend/my-virtual-pets-frontend/wwwroot/app.css
+++ b/my-virtual-pets/my-virtual-pets-frontend/my-virtual-pets-frontend/wwwroot/app.css
@@ -30,6 +30,13 @@ body {
     font-family: "Roboto_Mono", serif;
 }
 
+html, body {
+    height: 100%;
+    margin: 0 0 0 0;
+    padding: 0 0 0 0;
+    overflow: hidden;
+}
+
 .pixeltext {
     font-family: "Pixelify_Sans", serif;
 }
